--- a/Lab12.ipynb
+++ b/Lab12.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/geshrifter1/lab-notebooks-original/blob/main/Lab12.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "jyQP-9Fni5Ue"
       },
       "source": [
@@ -50,24 +60,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9sggpWEB33fV",
-        "outputId": "ceea8238-f302-4b4f-c590-d15559fbeb53"
+        "id": "9sggpWEB33fV"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0\n",
-            "0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# TODO: fibonacci: Given an integer, n, greater than or equal to 1\n",
         "# returns the n-th Fibonacci number\n",
@@ -82,19 +79,20 @@
         "    # Use the example above to return\n",
         "    # f1 and f2\n",
         "    # TODO: ADD CODE HERE\n",
-        "    \n",
-        "    \n",
+        "    if (n == 1) or (n == 2):\n",
+        "        return 1\n",
+        "\n",
         "    # recursive case\n",
         "    # this should make two recursive calls\n",
         "    # that means it makes two calls to itself with\n",
         "    # different input. What should that input be?\n",
         "    # TODO: ADD CODE HERE\n",
+        "    return (fibonacci(n-1)+fibonacci(n-2))\n",
         "\n",
         "    # TODO: Please remove the following line of code\n",
         "    # Right now this code returns 0 for any input greater\n",
         "    # than 0\n",
-        "    return 0\n",
-        "  \n",
+        "\n",
         "\n",
         "\n",
         "assert(fibonacci(7) == 13)\n",
@@ -108,7 +106,7 @@
       },
       "source": [
         "### Tracing Fibonacci\n",
-        "Now take a moment to see what is happening when you call your function `fibonacci(4)` in order to return the fourth Fibonacci number. \n",
+        "Now take a moment to see what is happening when you call your function `fibonacci(4)` in order to return the fourth Fibonacci number.\n",
         "\n",
         "**Do this:** Visualize the sequence of function calls made by your function when you call `fibonacci(4)` to return the fourth Fibonacci number either by hand or through PythonTutor. **Upload the resulting stack diagram to your lab notebooks repository and supply a plain language explanation of what is happening in the text box below:**\n",
         "\n"
@@ -122,8 +120,7 @@
       "source": [
         "***\n",
         "**Do this:**\n",
-        "> Explain your uploaded stack diagram here.\n",
-        "\n",
+        "So first fibonacci(4) is called. Since n does not equal 0, 1, or 2, it skips over those if statements and goes to the return line. However, before it can return a number, it must call fibonacci(n-1) which is fibonacci(3). Again, n does not equal 0, 1, or 2, so it skips them. Now, we must run fibonacci(n-1) again, with this time n being 3. So we're running fibonacci(2), and this time, it returns 1. Again, we have to run fibonacci(n-1) which is fibonacci(1). This also returns 1. Now, we know the return value of fibonacci(n-1), which is (4-1), or fibonacci(3), which is 2, because fibonacci(1)+fibonacci(2)=1+1=2. And we also know the return value of fibonacci(n-2), which is fibonacci(2), and it's 1. Finally, we get the return value of fibonacci(4), which is fibonacci(2)+fibonacci(3)=2+1=3.\n",
         "***"
       ]
     },
@@ -146,20 +143,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rz-jwUKp6cUJ",
-        "outputId": "5dd28841-af59-43ff-beea-45ecd6a22ca7"
+        "outputId": "3b064fb3-7f6f-4f65-b019-0cd2410bcac9"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "4 \n"
+            "2974\n"
           ]
         }
       ],
@@ -169,24 +166,25 @@
         "# This function should not return anything.\n",
         "\n",
         "def iterative_print_backwards(test):\n",
-        "    # Use a loop to go through test list backwards \n",
+        "    # Use a loop to go through test list backwards\n",
         "    # printing each element one at a time\n",
         "    # TODO: ADD CODE HERE to go through the list\n",
         "        # ADD CODE to print the element\n",
-        "        # To print a space between each element \n",
-        "        # use `end` as shown below. \n",
-        "        # This line prints the first element of \n",
-        "        # the list if it exists---remove it \n",
+        "        # To print a space between each element\n",
+        "        # use `end` as shown below.\n",
+        "        # This line prints the first element of\n",
+        "        # the list if it exists---remove it\n",
         "        # once you finish the function.\n",
-        "    print(test[0], end=' ')\n",
+        "        for i in range(len(test)- 1, -1, -1):\n",
+        "          print(test[i], end='')\n",
         "\n",
         "    # Print a new line for the entire list before returning\n",
         "    # This line below does not need to be changed\n",
-        "    print()\n",
-        "  \n",
+        "        print()\n",
+        "\n",
         "# Test the function by making function calls\n",
         "# You do not need to change the following line of code\n",
-        "# You can add more function calls to test your function  \n",
+        "# You can add more function calls to test your function\n",
         "iterative_print_backwards([4, 7, 9, 2])"
       ]
     },
@@ -209,20 +207,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ew5_E0TaTJw3",
-        "outputId": "e8d2cb36-1f93-424c-e8b8-07f522d3dc21"
+        "outputId": "fce1cc78-4789-4740-db85-5d90db55afff"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "2 "
+            "2 9 7 4"
           ]
         }
       ],
@@ -237,12 +235,14 @@
         "    # Base case: empty list, so nothing to print\n",
         "    if length == 0:\n",
         "        return\n",
-        "    \n",
+        "\n",
         "    # Base case: single element\n",
         "    # TODO: Check for single element and print it\n",
         "    # followed by new line and return\n",
         "    # TODO: ADD CODE HERE\n",
-        "    \n",
+        "    if length == 1:\n",
+        "        print(test[0], end='')\n",
+        "        return\n",
         "\n",
         "    # Recursive case\n",
         "    # print the last element (we did this for you already)\n",
@@ -250,11 +250,11 @@
         "    # You will make another call to itself on a smaller list\n",
         "    # What list should be passed to the recursive call?\n",
         "    # TODO: ADD ONE LINE OF CODE HERE TO MAKE THE RECURSIVE CALL\n",
-        "    \n",
+        "    recursive_print_backwards(test[:-1])\n",
         "\n",
         "# Test the function by making function calls\n",
         "# You do not need to change the following line of code\n",
-        "# You can add more function calls to test your function  \n",
+        "# You can add more function calls to test your function\n",
         "recursive_print_backwards([4, 7, 9, 2])"
       ]
     },
@@ -275,8 +275,7 @@
       "source": [
         "***\n",
         "\n",
-        "> Explain your uploaded stack diagram here.\n",
-        "\n",
+        " The first call is to recursive_print_backwards ([4, 7, 9, 2]). Because the list has a length of 4 (it is not an empty list or a single member), we reach the recursive case. We print the last element, which is 2. The list is then used in a recursive call [4, 7, 9]. The list's length is thus 3 (no empty or single entry), and we enter the recursive situation. The last element, 9, is then printed. Following that, we do a recursive call using the list 4, 7]. We reach the recursive situation since the length of the list is 2 (not empty or single member). The final element, 7, is then printed. Then, using the list 4 1, we make a recursive call. The element is then printed, which is 4. We then return from the previous recursive call with the list [4, 1.] We then return from the previous recursive call with the list [4, 7.] The list [4. 7. 9, 2] is returned from the recursive call. The list [4, 7, 9, 2] is returned from the initial call.\n",
         "***"
       ]
     },
@@ -323,7 +322,8 @@
       "version": "3.8.5"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
